--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,89 @@
     box-sizing: border-box;
 }
 
+header {
+    width: 100%;
+    height: 100%;
+    
+    background-color: var(--dark-color);
+}
+
+/* header video {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    z-index: -1;
+    filter: opacity(0.5);
+} */
+
+.header-container {
+    margin-top: 4vh;
+    display: flex;
+    height: 96vh;
+    width: 100%;
+ 
+}
+
+.header-container > div {
+    width: 50%;
+    height: 100%;
+} 
+
+/* HEADER FIRST BLOCK */
+.header-box:first-child {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    background-image: url(../img/me.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.header-box:first-child h1 {
+    font-size: 5.5em;
+    text-align: center;
+    color: var(--hell-color);
+}
+
+.header-box:first-child span {
+    color: var(--orange-color);
+}
+
+.header-box:first-child h2 {
+    margin-top: 30px;
+    color: var(--hell-color);
+    text-align: center;
+    font-size: 2.5em;
+    text-decoration: underline;
+}
+
+.header-box ul {
+    margin-top: 35px;
+    list-style: none;
+    display: flex;
+}
+
+.header-box ul a {
+    color: var(--hell-color);
+    font-size: 3em;
+    margin: 20px;
+}
+
+.header-box ul li:first-child a::after {
+    font-family: "FontAwesome";
+    content: '\e055';
+}
+
+.header-box ul li:last-child a:after {
+    font-family: "FontAwesome";
+    content: '\f0e1';
+}
+
+/* HEADER SECOND BLOCK */
+
