--- a/css/nav.css
+++ b/css/nav.css
@@ -24,10 +24,10 @@ nav {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 100;
     width: 100%;
-    height: 4vh;
-    background-color: rgba(0, 0, 0, 0.5);
+    height: 5vh;
+    /* background-color: rgba(0, 0, 0, 0.5); */
     display: flex;
     justify-content: center;
 }
