--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -4,3 +4,73 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: var(--dark-color);
+}
+
+header {
+    width: 100%;
+    height: 100vh;
+    
+}
+
+.header-container {
+    margin-top: 10vh;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+
+.titel-container {
+    width: fit-content;
+    height: auto;
+}
+
+h1 {
+    text-align: center;
+    color: var(--orange-color);
+    font-size: 3em;
+    text-transform: uppercase;
+}
+
+header h2 {
+    margin-top: 1em;
+    text-align: center;
+    color: var(--hell-color);
+    font-size: 5em;
+    text-transform: uppercase;
+}
+
+header h2::after {
+    font-family: "FontAwesome";
+    content: '';
+    width: 30%;
+    height: 2px;
+    background-color: var(--orange-color);
+    display: block;
+    
+    position: relative;
+    top: 3vh;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.header-grid-container {
+    margin-top: 10vh;
+    width: 90%;
+    height: 55%;
+    /* background-color: aliceblue; */
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 50px;
+}
+
+.header-grid-item {
+    background-color: brown;
+    
+}
