--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: var(--dark-color);
 }
@@ -23,7 +27,7 @@ header {
     flex-direction: column;
 }
 
-
+/* -------TITEL------------- */
 .titel-container {
     width: fit-content;
     height: auto;
@@ -58,6 +62,7 @@ header h2::after {
     transform: translateX(-50%);
 }
 
+/* ---------GRID CONTAINER-------------- */
 .header-grid-container {
     margin-top: 10vh;
     width: 90%;
@@ -71,6 +76,62 @@ header h2::after {
 }
 
 .header-grid-item {
-    background-color: brown;
     
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.header-grid-item:nth-child(1) {
+    background-image: url(../img/Basic-1.png);
+    background-size: cover;
+    background-position: center;   
+}
+
+.header-grid-item:nth-child(2) {
+    background-image: url(../img/Backstage-1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.header-grid-item:nth-child(3) {
+    background-image: url(../img/nav-pic-1.jpg);
+    background-size: cover;
+    background-position: center;
+    
+}
+
+.header-grid-item:nth-child(4) {
+    background-image: url(../img/nav-pic-3.jpg);
+    background-size: cover;
+    background-position: center;
+    
+}
+
+.header-grid-item:nth-child(5) {
+    background-image: url(../img/nav-pic-5.jpg);
+    background-size: cover;
+    background-position: center;
+    
+}
+
+.header-grid-item:nth-child(6) {
+    background-image: url(../img/nav-pic-6.jpg);
+    background-size: cover;
+    background-position: center;
+    
+}
+
+
+/* ---------------MAIN--------------------- */
+
+main {
+    width: 90%;
+    margin: 0 auto;
+}
+
+main section {
+    width: 100%;
+    height: 100vh;
+
 }
