--- a/assets/backstage-talks/css/style.css
+++ b/assets/backstage-talks/css/style.css
@@ -44,6 +44,9 @@ main {
   /* ------------NAV------------------------- */
   /* ---------------CONTACT---------------- */
 }
+main #section-6 {
+  background-color: white;
+}
 main section {
   width: 100%;
   height: 100vh;
@@ -55,6 +58,7 @@ main section .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 main section .container h2, main section .container a, main section .container span {
   line-height: 2.5em;
@@ -73,6 +77,7 @@ main section .container span {
 main section .image {
   width: 80%;
   height: 70%;
+  margin-bottom: 2em;
 }
 main section .image img {
   width: 100%;
@@ -114,12 +119,12 @@ footer {
   position: fixed;
   bottom: 1em;
   left: 1em;
-  width: 15vw;
+  width: 25vw;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 23vh;
-  font-size: 1.5em;
+  justify-content: space-around;
+  height: 28vh;
+  font-size: 1.3em;
 }
 footer .footer-container p {
   line-height: 1.3em;
@@ -158,4 +163,67 @@ footer a:hover {
 
 .issue-1 {
   background-color: #E30512;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/* -------------------Media Queries ------------------------*/
+/* Larger Tablets & Laptops */
+@media screen and (max-width: 1279px) {
+  header h1 {
+    font-size: 2.5em;
+  }
+  main section .container {
+    height: 75%;
+  }
+  main section .container h2 {
+    font-size: 1.3em;
+  }
+  main section .container span {
+    font-size: 1.2em;
+  }
+  main section .image {
+    height: 50%;
+  }
+  main nav ul {
+    font-size: 1.3em;
+  }
+  main .contact a {
+    font-size: 1.3em;
+  }
+  footer {
+    font-size: 1.1em;
+  }
+  footer .footer-container p {
+    line-height: 1em;
+  }
+}
+/* Larger Smartphones & Tablets  */
+@media screen and (max-width: 768px) {
+  header h1 {
+    font-size: 1.5em;
+  }
+  main section .container {
+    height: 70%;
+  }
+  main section .container h2 {
+    font-size: 1em;
+  }
+  main section .container span {
+    font-size: 1em;
+  }
+  main section .image {
+    height: 30%;
+  }
+  main nav ul {
+    font-size: 1.1em;
+  }
+  main .contact a {
+    font-size: 1em;
+  }
+  footer {
+    font-size: 0.8em;
+  }
+  footer .footer-container p {
+    line-height: 1em;
+  }
+}
+/* Smartphones *//*# sourceMappingURL=style.css.map */
