--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -6,6 +6,7 @@
 
 html {
     scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
 }
 
 body {
@@ -15,11 +16,10 @@ body {
 header {
     width: 100%;
     height: 100vh;
-    
+    scroll-snap-align: start;
 }
 
 .header-container {
-    margin-top: 10vh;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -34,6 +34,7 @@ header {
 }
 
 h1 {
+    margin-top: 10vh;
     text-align: center;
     color: var(--orange-color);
     font-size: 3em;
@@ -133,5 +134,94 @@ main {
 main section {
     width: 100%;
     height: 100vh;
+    display: flex;
+    align-items: center;
+    scroll-snap-align: start;
+}
 
+.project-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+main section > div {
+    width: 100%;
+    height: 90%;
+}
+
+.project-content p, .project-content h2, .project-content h3 {
+    width: 50%;
+    color: var(--hell-color);
+}
+
+.project-content h2 {
+    font-size: 5em;
+}
+
+.project-content h3 {
+    margin-top: 1em;
+    font-size: 2em;
+    /* width: fit-content; */
+}
+
+.project-content p {
+    margin-top: 1em;
+    font-size: 2.5em;
+    font-style: italic;
+}
+
+.project-iframe iframe {
+    width: 100%;
+    height: 100%;
+}
+
+/* Button */
+
+.project-content  a {
+    max-width: fit-content;
+    display: inline-block;
+}
+
+.project-content > a div {
+    margin-top: 2em;
+    margin-bottom: 1em;
+    font-size: 1.5em;
+    width: fit-content;
+    padding: 15px 30px;
+    border: 1px solid var(--hell-color);
+    border-radius: 40px;
+    transition: 0.5s;
+}
+
+.project-content > a div span {
+    color: var(--hell-color);
+    text-transform: uppercase;
+}
+
+.project-content > a:hover div {
+    background-color: var(--hell-color); 
+    color: var(--dark-color);
+    transform: translateX(10%);
+    box-shadow: 2px 2px 5px var(--hell-color);
+}
+
+.project-content > a:hover div span {
+    color: var(--dark-color);
+}
+
+/* Jede Zweite Section andere Einstellungen */
+
+section:nth-child(even) .project-content {
+    align-items: flex-end;
+}
+
+section:nth-child(even) .project-content > a:hover div {
+    transform: translateX(-10%);
+}
+
+section:nth-child(even) .project-content h2,
+section:nth-child(even) .project-content h3,
+section:nth-child(even) .project-content p {
+    text-align: end;
 }
