--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,8 @@ section > div {
 }
 /* BUTTON */
 .content > a div {
-    margin-top: 10%;
+    margin-bottom: 1em;
+    margin-top: 1em;
     width: fit-content;
     padding: 15px 30px;
     border: 1px solid var(--hell-color);
@@ -225,7 +226,7 @@ main span {
 }
 
 main p {
-    margin-top: 25px;
+    margin-top: 1em;
     font-size: 2.8em;
     font-style: italic;
 }
