--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -45,7 +45,7 @@ header h2 {
     margin-top: 1em;
     text-align: center;
     color: var(--hell-color);
-    font-size: 5em;
+    font-size: 4em;
     text-transform: uppercase;
 }
 
@@ -85,8 +85,6 @@ header h2::after {
     display: flex;
     justify-content: center;
     align-items: center;
-    
-    /* border: 1px solid var(--hell-color); */
 }
 
 .header-grid-item span {
@@ -95,14 +93,15 @@ header h2::after {
 
 .header-grid-item h3 {
     color: var(--hell-color);
-    font-size: 4em;
+    font-size: 3em;
     text-align: center;
 }
 
 .header-grid-item p {
     color: var(--hell-color);
     text-align: center;
-    font-size: 2.5em;
+    font-size: 2em;
+    font-style: italic;
 }
 
 /* BG  div */
@@ -127,7 +126,7 @@ header h2::after {
 .header-grid-item div:first-child {
     width: 100%;
     transition: all 0.8s;
-    transform: translateY(11em);
+    transform: translateY(7.5em);
     background-color: rgba(0, 0, 0, 0.5);
 
 }
@@ -214,29 +213,34 @@ main section > div {
 }
 
 .project-content p, .project-content h2, .project-content h3 {
-    width: 50%;
+    width: 70%;
     color: var(--hell-color);
 }
 
 .project-content h2 {
-    font-size: 5em;
+    font-size: 4em;
 }
 
 .project-content h3 {
-    margin-top: 1em;
-    font-size: 2em;
-    /* width: fit-content; */
+    margin-top: 0.8em;
+    font-size: 1.7em;
 }
 
 .project-content p {
     margin-top: 1em;
-    font-size: 2.5em;
+    font-size: 1.8em;
     font-style: italic;
+}
+
+.project-iframe {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .project-iframe iframe {
     width: 100%;
-    height: 100%;
+    height: 90%;
     object-fit: cover;
 }
 
@@ -250,9 +254,9 @@ main section > div {
 .project-content > a div {
     margin-top: 2em;
     margin-bottom: 1em;
-    font-size: 1.5em;
+    font-size: 1em;
     width: fit-content;
-    padding: 15px 30px;
+    padding: 10px 20px;
     border: 1px solid var(--orange-color);
     border-radius: 40px;
     transition: 0.5s;
@@ -288,4 +292,160 @@ section:nth-child(even) .project-content h2,
 section:nth-child(even) .project-content h3,
 section:nth-child(even) .project-content p {
     text-align: end;
+}
+
+/* -----------Media Queries-------------- */
+
+/* Larger Tablets & Laptops */
+@media screen and (max-width: 1279px) {
+
+    /* Header */
+    nav ul {
+        width: 55%;
+    }
+
+    h1 {
+        font-size: 2em;
+    }
+
+    header h2 {
+        font-size: 3em;
+    }
+
+    .header-grid-item h3 {
+        font-size: 1.8em;
+    }
+
+    .header-grid-item p {
+        font-size: 1.3em;
+    }
+
+    .header-grid-item div:first-child {
+        transform: translateY(8em);
+    }
+
+    /* Main */
+
+    .project-content h2 {
+        font-size: 3em;
+    }
+
+    .project-content h3 {
+        font-size: 1.3em;
+    }
+
+    .project-content p {
+        margin-top: 1em;
+        font-size: 1.4em;
+        width: 80%;
+    }
+
+    .project-iframe iframe {
+        height: 80%;
+    }
+}
+
+/* Larger Smartphones & Tablets  */
+
+@media screen and (max-width: 768px) {
+    /* Header */
+    
+    html {
+        scroll-behavior: smooth;
+        scroll-snap-type: none;
+    }
+
+    nav ul {
+        width: 70%;
+    }
+
+    nav ul a {
+        font-size: 1.1em;
+    }
+
+    .header-grid-container {
+        margin-top: 10vh;
+        width: 90%;
+        height: 75%;
+
+    
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        gap: 20px;
+    }
+    
+    h1 {
+        margin-top: 8vh;
+        font-size: 1.5em;
+    }
+
+    header h2 {
+        margin-top: 0.3em;
+        font-size: 2em;
+    }
+
+    .header-grid-item h3 {
+        font-size: 1.3em;
+    }
+
+    .header-grid-item p {
+        font-size: 1em;
+    }
+    .header-grid-item div:first-child {
+        transform: translateY(7.5em);
+    }
+
+    /* Main */
+
+    main section {
+        
+        flex-direction: column;
+    }
+
+    .project-content h2 {
+        font-size: 2em;
+    }
+
+    .project-content h3 {
+        font-size: 1em;
+    }
+
+    .project-content p {
+        margin-top: 1em;
+        font-size: 1em;
+        width: 100%;
+    }
+
+    .project-iframe iframe {
+        height: 80%;
+    }
+
+    .project-content > a div {
+    margin-top: 2em;
+    margin-bottom: 1em;
+    font-size: 0.7em;
+    width: fit-content;
+    padding: 7px 20px;
+    border: 1px solid var(--orange-color);
+    border-radius: 40px;
+    transition: 0.5s;
+}
+
+}
+
+/* Smartphones */
+
+@media screen and (max-width: 480px) {
+    /* Header */
+    nav ul {
+        width: 80%;
+    }
+    nav ul a {
+        font-size: 1em;
+    }
+
+    /* Main */
+
+
 }
