--- a/css/contact.css
+++ b/css/contact.css
@@ -12,7 +12,7 @@ header {
     width: 100%;
     height: 100%;
 }
-
+/* ---------------MAIN-------------------- */
 main {
     width: 100%;
     height: 90vh;
@@ -22,7 +22,7 @@ main {
     justify-content: flex-end;
     align-items: center;
 }
-
+/* GRID CONTAINER */
 .container {
     width: 75%;
     height: 65%;
@@ -173,7 +173,7 @@ form button:hover {
     background-size: cover;
 }
 
-/* Media Queries */
+/* ==================Media Queries ==================*/
 
 /* Larger Tablets & Laptops */
 @media screen and (max-width: 1279px) {
