--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -68,7 +68,6 @@ header h2::after {
     margin-top: 10vh;
     width: 90%;
     height: 55%;
-    /* background-color: aliceblue; */
 
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -176,9 +175,6 @@ header h2::after {
     
 }
 
-
-
-
 /* ---------------MAIN--------------------- */
 
 main {
@@ -189,15 +185,20 @@ main {
 #project-6 {
     height: 90vh;
 }
+
 main section {
     width: 100%;
     height: 100vh;
     display: flex;
-    align-items: center;
     scroll-snap-align: start;
 }
 
+/* ---------Text in the Sections ---------*/
 .project-content {
+    position: sticky;
+    top: 20vh;
+    height: fit-content;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -209,7 +210,7 @@ main section {
 
 main section > div {
     width: 100%;
-    height: 90%;
+    height: 100%;
 }
 
 .project-content p, .project-content h2, .project-content h3 {
@@ -231,16 +232,17 @@ main section > div {
     font-size: 1.8em;
     font-style: italic;
 }
-
+/* ---------Iframe---------------- */
 .project-iframe {
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 .project-iframe iframe {
     width: 100%;
-    height: 90%;
+    height: 80%;
     object-fit: cover;
 }
 
@@ -278,7 +280,7 @@ main section > div {
     color: var(--dark-color);
 }
 
-/* Jede Zweite Section andere Einstellungen */
+/* For even section's text right */
 
 section:nth-child(even) .project-content {
     align-items: flex-end;
@@ -294,7 +296,7 @@ section:nth-child(even) .project-content p {
     text-align: end;
 }
 
-/* -----------Media Queries-------------- */
+/* =======================Media Queries=========================== */
 
 /* Larger Tablets & Laptops */
 @media screen and (max-width: 1279px) {
@@ -321,7 +323,7 @@ section:nth-child(even) .project-content p {
     }
 
     .header-grid-item div:first-child {
-        transform: translateY(8em);
+        transform: translateY(7em);
     }
 
     /* Main */
@@ -393,7 +395,7 @@ section:nth-child(even) .project-content p {
         font-size: 1em;
     }
     .header-grid-item div:first-child {
-        transform: translateY(7.5em);
+        transform: translateY(6.5em);
     }
 
     /* Main */
@@ -401,6 +403,10 @@ section:nth-child(even) .project-content p {
     main section {
         
         flex-direction: column;
+    }
+
+    .project-content {
+        position: static;
     }
 
     .project-content h2 {
