--- a/css/skills.css
+++ b/css/skills.css
@@ -41,7 +41,7 @@ h4 {
     font-size: 1.8em;
     box-shadow: 5px 2px 5px 3px rgba(0, 0, 0, 0.5);
 }
-
+/* --------GRID CONTAINER----------- */
 .grid-skills-container {
     position: relative;
     padding: 1em;
@@ -54,6 +54,7 @@ h4 {
 
 }
 
+/* BACKGROUND DIV */
 .bg-item {
     position: absolute;
     z-index: -1;
@@ -65,6 +66,7 @@ h4 {
     background-position: center;
 }
 
+/* ---GRID ITEMS---- */
 .grid-item {
     text-align: center;
     color: var(--hell-color);
@@ -231,3 +233,5 @@ h4 {
         font-size: 1em;
     }
 }
+
+
