--- a/css/skills.css
+++ b/css/skills.css
@@ -193,6 +193,8 @@ h4 {
 
 
 
+
+
 /* -----------Media Queries-------------- */
 
 /* Larger Tablets & Laptops */
@@ -237,14 +239,22 @@ h4 {
     }
 
     /* MAIN */
-    
+
+
+
+    main {
+        width: 100%;
+    }
 
     .grid-skills-container {
-        width: 100%;
-        
+        width: 95%;
+        padding: 0.5em;
+        grid-template-rows: repeat(4, 1fr) repeat(4, 0.5fr);
     }
+
     h1 {
         font-size: 2.3em;
+        margin-top: 0.5em;
     }
     
     h2 {
@@ -269,6 +279,29 @@ h4 {
         width: 80%;
     }
     nav ul a {
+        font-size: 1em;
+    }
+
+    /* MAIN */
+
+    .grid-skills-container {
+        grid-template-rows: repeat(4, 1fr) repeat(4, 0.5fr);
+    }
+
+    h1 {
+        font-size: 2em;
+
+    }
+    
+    h2 {
+        font-size: 1.2em
+    }
+    
+    h3 {
+        font-size: 0.8em;
+    }
+    
+    h4 {
         font-size: 1em;
     }
 }
