--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -143,7 +143,7 @@ header h2::after {
 }
 
 .header-grid-item:hover div:first-child {
-    transform: translateY(0);
+    transform: translateY(3em);
     background-color: rgba(0, 0, 0, 0.0);
 }
 
@@ -366,7 +366,7 @@ section:nth-child(even) .project-content p {
     
     html {
         scroll-behavior: smooth;
-        scroll-snap-type: none;
+        /* scroll-snap-type: none; */
     }
 
     nav ul {
@@ -378,7 +378,7 @@ section:nth-child(even) .project-content p {
     }
 
     .header-grid-container {
-        margin-top: 10vh;
+        margin-top: 5vh;
         width: 90%;
         height: 75%;
 
@@ -405,7 +405,7 @@ section:nth-child(even) .project-content p {
         font-size: 1em;
     }
     .header-grid-item div:first-child {
-        transform: translateY(9em);
+        transform: translateY(7.5em);
     }
 
     /* Main */
@@ -417,10 +417,15 @@ section:nth-child(even) .project-content p {
 
     .project-content {
         position: static;
+
     }
 
     .project-content h2 {
         font-size: 2em;
+    }
+
+    .project-content:nth-child(odd) h2 {
+        margin-top: 2em;
     }
 
     .project-content h3 {
@@ -446,7 +451,7 @@ section:nth-child(even) .project-content p {
     border: 1px solid var(--orange-color);
     border-radius: 40px;
     transition: 0.5s;
-}
+    }
 
 }
 
@@ -461,7 +466,10 @@ section:nth-child(even) .project-content p {
         font-size: 1em;
     }
 
+    .header-grid-item div:first-child {
+        transform: translateY(7.5em);
+    }
     /* Main */
 
-
+    
 }
