--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,4 @@
-*, *::after, *::before {
+ *, *::after, *::before {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -332,7 +332,11 @@ main p {
 
 @media screen and (max-width: 768px) {
     /* Header */
-    .header-box-1 {
+
+    nav {
+        display: none;
+    }
+    .header-box-2 {
         display: none;
     }
     nav ul {
