--- a/css/nav.css
+++ b/css/nav.css
@@ -62,3 +62,154 @@ nav ul a::after {
 nav ul a:hover::after {
     width: 100%;  
 }
+
+
+
+/* BURGER MENU */
+
+.burger-menu {
+    display: none;
+    
+
+}
+.burger-menu a {
+    display: block;
+    height: 100%;
+    overflow: hidden;
+    
+}
+
+.burger-menu div {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: 0.8s;
+
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.burger-menu div:hover {
+    transform: scale(1.1);
+}
+
+.burger-menu h3, .burger-menu p {
+    margin-left: 15%;
+    color: var(--hell-color);
+}
+
+.burger-menu h3 {
+    font-size: 3em;
+}
+
+.burger-menu p {
+    font-size: 1.5em;
+    font-style: italic;
+}
+
+.burger-menu span {
+    color: var(--orange-color);
+}
+
+.header-menu-1 {
+    background-image: url(../img/nav-pic-4.jpg);
+}
+
+.header-menu-2 {
+    background-image: url(../img/nav-pic-1.jpg);
+}
+
+.header-menu-3 {
+    background-image: url(../img/nav-pic-3.jpg);
+}
+
+.header-menu-4 {
+    background-image: url(../img/nav-pic-6.jpg);  
+}
+
+/* BURGER BUTTONS */
+
+.menu-btn {
+    display: none;
+    width: 10vw;
+    height: 10vw;
+
+    position: fixed;
+    top: 1em;
+    left: 2em;
+    z-index: 35;
+}
+
+.menu-btn span {
+    background-color: var(--orange-color);
+    width: 100%;
+    height: 10%;
+
+    position: absolute;
+    left: 50%;
+    top: 50%;
+
+    transform: translate(-50%, -50%);
+}
+
+.menu-btn span:nth-of-type(2) {
+    top: calc(50% - 25%);
+}
+
+.menu-btn span:nth-of-type(3) {
+    top: calc(50% + 25%);
+}
+
+
+@media screen and (max-width: 768px) {
+
+    nav {
+        display: none;
+    }
+
+    /* BURGER MENU */
+    .burger-menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 30;
+
+        width: 100%;
+        height: 100%;
+        background-color: var(--dark-color);
+        padding: 2em;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 20px;
+
+        transform: translateX(-100%);
+        transition: all 0.7s;
+    }
+
+    .burger-menu.active-burger-menu {
+        transform: translateX(0);
+    }
+
+    .menu-btn {
+        display: block;
+    }
+
+    .menu-btn.active-burger-menu span:nth-of-type(1){
+        display: none;
+    }
+
+    .menu-btn.active-burger-menu span:nth-of-type(2){
+        top: 50%;
+        transform: translate(-50%, 0) rotate(45deg);
+    }
+
+    .menu-btn.active-burger-menu span:nth-of-type(3){
+        top: 50%;
+        transform: translate(-50%, 0) rotate(-45deg);
+    }
+}
